
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_16__ TYPE_8__ ;
typedef struct TYPE_15__ TYPE_7__ ;
typedef struct TYPE_14__ TYPE_6__ ;
typedef struct TYPE_13__ TYPE_5__ ;
typedef struct TYPE_12__ TYPE_4__ ;
typedef struct TYPE_11__ TYPE_3__ ;
typedef struct TYPE_10__ TYPE_2__ ;
typedef struct TYPE_9__ TYPE_1__ ;


struct TYPE_16__ {int tv_usec; int tv_sec; } ;
struct TYPE_15__ {int tv_usec; int tv_sec; } ;
struct TYPE_14__ {int s_addr; } ;
struct TYPE_13__ {int s_addr; } ;
struct TYPE_12__ {int s_addr; } ;
struct TYPE_11__ {int tv_usec; int tv_sec; } ;
struct TYPE_10__ {int tv_usec; int tv_sec; } ;
struct TYPE_9__ {int tv_usec; int tv_sec; } ;
struct nm_send_header {int uint7; int string3; int string2; int string1; TYPE_8__ timeval5; int uint6; TYPE_7__ timeval4; int ulong5; int ulong4; int ulong3; TYPE_6__ inaddr3; int ulong2; int ulong1; TYPE_5__ inaddr2; TYPE_4__ inaddr1; int uint5; int uint4; int uint3; int uint2; int uint1; TYPE_3__ timeval3; TYPE_2__ timeval2; TYPE_1__ timeval1; } ;
struct in_addr {int dummy; } ;
typedef int bool_t ;
typedef int XDR ;


 int FALSE ;
 int TRUE ;
 int xdr_bytes (int *,char**,size_t*,size_t) ;
 int xdr_long (int *,int *) ;
 int xdr_u_int (int *,int *) ;
 int xdr_u_long (int *,int *) ;
 int xdr_wrapstring (int *,int *) ;

bool_t
xdr_nm_send_header(XDR *xdrs, struct nm_send_header *objp)
{
    char *addr;
    size_t size = sizeof(struct in_addr);

    if (!xdr_long(xdrs, &objp->timeval1.tv_sec))
 return (FALSE);
    if (!xdr_long(xdrs, &objp->timeval1.tv_usec))
 return (FALSE);
    if (!xdr_long(xdrs, &objp->timeval2.tv_sec))
 return (FALSE);
    if (!xdr_long(xdrs, &objp->timeval2.tv_usec))
 return (FALSE);
    if (!xdr_long(xdrs, &objp->timeval3.tv_sec))
 return (FALSE);
    if (!xdr_long(xdrs, &objp->timeval3.tv_usec))
 return (FALSE);
    if (!xdr_u_int(xdrs, &objp->uint1))
 return (FALSE);
    if (!xdr_u_int(xdrs, &objp->uint2))
 return (FALSE);
    if (!xdr_u_int(xdrs, &objp->uint3))
 return (FALSE);
    if (!xdr_u_int(xdrs, &objp->uint4))
 return (FALSE);
    if (!xdr_u_int(xdrs, &objp->uint5))
 return (FALSE);
    addr = (char *) &objp->inaddr1.s_addr;
    if (!xdr_bytes(xdrs, &addr, &size, size))
 return (FALSE);
    addr = (char *) &objp->inaddr2.s_addr;
    if (!xdr_bytes(xdrs, &addr, &size, size))
 return (FALSE);
    if (!xdr_u_long(xdrs, &objp->ulong1))
 return (FALSE);
    if (!xdr_u_long(xdrs, &objp->ulong2))
 return (FALSE);
    addr = (char *) &objp->inaddr3.s_addr;
    if (!xdr_bytes(xdrs, &addr, &size, size))
 return (FALSE);
    if (!xdr_u_long(xdrs, &objp->ulong3))
 return (FALSE);
    if (!xdr_u_long(xdrs, &objp->ulong4))
 return (FALSE);
    if (!xdr_u_long(xdrs, &objp->ulong5))
 return (FALSE);
    if (!xdr_long(xdrs, &objp->timeval4.tv_sec))
 return (FALSE);
    if (!xdr_long(xdrs, &objp->timeval4.tv_usec))
 return (FALSE);
    if (!xdr_u_int(xdrs, &objp->uint6))
 return (FALSE);
    if (!xdr_long(xdrs, &objp->timeval5.tv_sec))
 return (FALSE);
    if (!xdr_long(xdrs, &objp->timeval5.tv_usec))
 return (FALSE);
    if (!xdr_wrapstring(xdrs, &objp->string1))
 return (FALSE);
    if (!xdr_wrapstring(xdrs, &objp->string2))
 return (FALSE);
    if (!xdr_wrapstring(xdrs, &objp->string3))
 return (FALSE);
    if (!xdr_u_int(xdrs, &objp->uint7))
 return (FALSE);
    return (TRUE);
}
